--- a/Server/package.json
+++ b/Server/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/anraiki/circleidea#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg-promise": "^8.5.5"
   },
   "devDependencies": {
     "typescript": "^3.3.3"
