--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "nodemon -L src/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "pg-promise": "^8.5.5"
   },
   "devDependencies": {
+    "nodemon": "^1.18.10",
     "typescript": "^3.3.3"
   }
 }
