--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -L src/index.js"
+    "start": "pm2 start ecosystem.config.js"
   },
   "repository": {
     "type": "git",
