--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/anraiki/circleidea#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "pg-promise": "^8.5.5"
   },
