Conforming to Typescript. Add typescript dependency of PG and Express

--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -17,9 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
