--- a/Server/package.json
+++ b/Server/package.json
@@ -2,8 +2,12 @@
   "name": "circleidea-server",
   "version": "1.0.0",
   "description": "API server of Circle Idea",
-  "main": "index.js",
+  "main": "dist/index.ts",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "tstart": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "pm2 start ecosystem.config.js"
   },
@@ -25,9 +29,9 @@
   },
   "homepage": "https://github.com/anraiki/circleidea#readme",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/pg": "^7.4.13",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "pg": "^7.8.0",
     "pg-promise": "^8.5.5"
   },
   "devDependencies": {
