--- a/Server/package.json
+++ b/Server/package.json
@@ -2,10 +2,10 @@
   "name": "circleidea-server",
   "version": "1.0.0",
   "description": "API server of Circle Idea",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
     "prestart": "npm run build",
     "tstart": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -32,9 +32,11 @@
     "@types/express": "^4.16.1",
     "@types/pg": "^7.4.13",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "pg-promise": "^8.5.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
     "@types/node": "^11.9.5",
     "nodemon": "^1.18.10",
     "tslint": "^5.12.1",
