--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,5 @@ services:
       POSTGRES_USER: postgres
     ports:
       - "5432:5432"
+    volumes: 
+      - ./Database:/docker-entrypoint-initdb.d
